code/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx       
  rules:
    - host: devops-api.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-api-svc     
                port:
                  number: 80
